[package]
name = "fdk-solitity"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI & Async
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6"

# Alloy (Types & ABI)
alloy-primitives = "1.5"
alloy-sol-types = "1.5"

# Foundry (includes revm re-export to avoid version conflicts)
foundry-evm = { git = "https://github.com/foundry-rs/foundry", tag = "v1.5.0" }
foundry-cheatcodes = { git = "https://github.com/foundry-rs/foundry", tag = "v1.5.0" }
foundry-config = { git = "https://github.com/foundry-rs/foundry", tag = "v1.5.0" }